--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,11 @@ html, body {
 	height: 100%;
 	min-height: 100;
 }
+
+.column iframe {
+    width: 100%;
+    height: 100%;
+}
 /*
 body {
 	height: 100%;
